# OpenGLPlayground

./: .gitignore  CMakeLists.txt  README.md
libs/SOIL2/: CMakeLists.txt
libs/SOIL2/src/: CMakeLists.txt
libs/SOIL2/src/SOIL2/: SOIL2.c
libs/assimp/: CMakeLists.txt
libs/assimp/tools/assimp_cmd/: CMakeLists.txt
libs/cglm/: meson.build
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/rglu/: CMakeLists.txt  README.md
libs/rglu/include/: rglu.h  rglu_common.h  rglu_material.h  rglu_math.h  rglu_matstack.h  rglu_model.h  rglu_shader.h  rglu_shape.h  rglu_texture.h  rglu_util.h
libs/rglu/include/shape/: rglu_shapebase.h  rglu_sphere.h  rglu_torus.h
libs/rglu/src/: CMakeLists.txt  rglu_material.c  rglu_math.c  rglu_matstack.c  rglu_model.c  rglu_shader.c  rglu_texture.c  rglu_util.c
libs/rglu/src/shape/: rglu_sphere.c  rglu_torus.c
libs/rlib/: CMakeLists.txt
projects/demo/: CMakeLists.txt
projects/demo/include/: demo.h
projects/demo/src/: main.c
